# tradingagents-idx

./: .env.example  .gitignore  CHANGELOG.md  README.md  install.sh  main.py  pyproject.toml  requirements.txt  start.sh
docs/: ARCHITECTURE.md  RESEARCH_WORKFLOW.md
frontend/: auth.config.ts  auth.ts  instrumentation.ts  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/usage/: route.ts
frontend/app/api/watchlist/: route.ts
frontend/app/login/: page.tsx
frontend/components/: AgentPanel.tsx  TickerInput.tsx  UserMenu.tsx  VerdictCard.tsx  WatchlistPanel.tsx
frontend/lib/: authHelpers.ts  hooks.ts  idxTickers.ts  jobStore.ts  jobStoreInterface.ts  jobStorePrisma.ts  jobStoreRedis.ts  startup-cleanup.ts  utils.ts
frontend/prisma/: dev.db  dev.db-journal  prisma.config.ts  schema.prisma
frontend/prisma/migrations/20260329022920_add_rapidapi_usage/: migration.sql
frontend/prisma/prisma/: dev.db
frontend/scripts/: seed.ts
frontend/types/: next-auth.d.ts
tests/: fake_tradingagents.py  test_agents.py  test_idx_rapidapi.py  test_job_pipeline.py  test_job_store_manual.md  test_utils.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py
tradingagents/dataflows/: alpha_vantage_indicator.py  idx_rapidapi.py  idx_rapidapi_tools.py  y_finance.py
tradingagents/graph/: propagation.py  trading_graph.py
(+7 files in other folders)
